removed blue-dark variable with blue-light in light-theme, blue variable now has same value as blue-dark had before, should fix issue with any low contrast issues with blue in light-theme, this made query-blue variable unnecessery removed it, added variable for variable dropdown highlight background

--- a/public/sass/components/_slate_editor.scss
+++ b/public/sass/components/_slate_editor.scss
@@ -122,7 +122,7 @@
   .token.attr-value,
   .token.keyword,
   .token.class-name {
-    color: $query-blue;
+    color: $blue;
   }
 
   .token.regex,
